[gd_scene load_steps=2 format=3 uid="uid://cgnj6okm4sogh"]

[ext_resource type="Script" uid="uid://6c4acp88v3qn" path="res://scenes/triggers/area_trigger.gd" id="1_d0o6e"]

[node name="AreaTrigger" type="Area2D" groups=["Persistent"]]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_d0o6e")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
